--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "@inertiajs/inertia": "^0.11.0",
         "@inertiajs/inertia-vue3": "^0.6.0",
         "@inertiajs/progress": "^0.2.7",
+        "@quasar/extras": "^1.0.0",
         "@tailwindcss/forms": "^0.5.2",
         "@tailwindcss/typography": "^0.5.2",
         "@vitejs/plugin-vue": "^3.0.0",
@@ -17,11 +18,14 @@
         "lodash": "^4.17.19",
         "postcss": "^8.4.14",
         "primevue": "^3.13.0",
+        "quasar": "^2.0.0-beta.16",
+        "sass": "^1.54.9",
         "tailwindcss": "^3.1.0",
         "vite": "^3.0.0",
         "vue": "^3.2.31"
     },
     "dependencies": {
+        "caniuse-lite": "^1.0.30001390",
         "vue3-easy-data-table": "^1.4.17"
     }
 }
