--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,9 @@
         "laravel/jetstream": "^2.12",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
+        "spatie/pdf-to-text": "^1.52",
+        "symfony/http-client": "^6.0",
+        "symfony/mailgun-mailer": "^6.0",
         "tightenco/ziggy": "^1.0"
     },
     "require-dev": {
