--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.0.2",
+        "barryvdh/laravel-dompdf": "^2.0",
         "guzzlehttp/guzzle": "^7.2",
         "hashids/hashids": "^4.1",
         "inertiajs/inertia-laravel": "^0.6.3",
@@ -13,6 +14,7 @@
         "laravel/jetstream": "^2.12",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
+        "orangehill/iseed": "^3.0",
         "spatie/pdf-to-text": "^1.52",
         "symfony/http-client": "^6.0",
         "symfony/mailgun-mailer": "^6.0",
